--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "template"
+name = "{{ cookiecutter.}}"
 version = "0.1.0"
 description = ""
 authors = ["Bol4onok <95026332+MihailGulkin@users.noreply.github.com>"]
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 psycopg2 = "^2.9.5"
 drf-spectacular = "^0.25.1"
 model-bakery = "^1.10.1"
+cookiecutter = "^2.1.1"
 
 
 [build-system]
