update most common template

--- a/{{cookiecutter.repo_name}}/docker-compose.dev.yaml
+++ b/{{cookiecutter.repo_name}}/docker-compose.dev.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    container_name: postgresDevelopment
+    container_name: postgres{{ cookiecutter.docker_title }}Development
     image: postgres:latest
     restart: on-failure
     ports:
