--- a/{{cookiecutter.repo_name}}/src/core/.envExample
+++ b/{{cookiecutter.repo_name}}/src/core/.envExample
@@ -7,7 +7,7 @@ DJANGO_ALLOWED_HOSTS="123.0.0.0 localhost [::1]" # HOSTS, DELIMITER=SPACE, LIKE
 
 
 # DB data
-POSTGRES_DB="MusicCatalog" # POSTGRES DB NAME
+POSTGRES_DB="{{ cookiecutter.app_title }}" # POSTGRES DB NAME
 POSTGRES_USER="postgres" # POSTGRES USER
 POSTGRES_PASSWORD="1234" # POSTGRES PASSWORD
 POSTGRES_HOST="postgres" # POSTGRES HOST
