--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -1,4 +1,6 @@
 up-prod:
-		docker-compose -f docker-compose.prod.yaml up --build
+	docker-compose -f docker-compose.prod.yaml up --build
 down-prod:
-		docker-compose -f docker-compose.prod.yaml down -v
+	docker-compose -f docker-compose.prod.yaml down -v
+update-poetry:
+	poetry add $( cat requirements.txt )
