--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "{{ cookiecutter.repo_name }}"
+name = "django-template"
 version = "0.1.0"
 description = ""
 authors = ["Bol4onok <95026332+MihailGulkin@users.noreply.github.com>"]
