--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -4,3 +4,5 @@ down-prod:
 	docker-compose -f docker-compose.prod.yaml down -v
 update-poetry:
 	poetry add $( cat requirements.txt )
+install-hooks:
+	pre-commit install -t pre-commit
