--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2 = "^2.9.5"
 drf-spectacular = "^0.25.1"
 model-bakery = "^1.10.1"
 cookiecutter = "^2.1.1"
+pre-commit = "^3.0.4"
 
 
 [build-system]
